--- a/packages/shadcn/package.json
+++ b/packages/shadcn/package.json
@@ -72,6 +72,7 @@
     "fast-glob": "^3.3.2",
     "fs-extra": "^11.1.0",
     "https-proxy-agent": "^6.2.0",
+    "jsonc": "^2.0.0",
     "kleur": "^4.1.5",
     "msw": "^2.7.1",
     "node-fetch": "^3.3.0",
