Package config updates

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   ],
   "scripts": {
     "build": "turbo run build",
-    "build:cli": "turbo --filter=shadcn build",
+    "build:cli": "turbo --filter=@withsprinkles/shadcn-ui build",
     "build:registry": "pnpm --filter=www,v4 build:registry && pnpm --filter=www,v4 lint:fix && pnpm format:write -- --loglevel silent",
     "registry:build": "pnpm --filter=v4 registry:build && pnpm lint:fix && pnpm format:write -- --loglevel silent",
     "registry:capture": "pnpm --filter=www registry:capture",
@@ -25,11 +25,11 @@
     "cli:dev": "turbo --filter=shadcn-ui dev",
     "cli:start": "pnpm --filter=shadcn-ui start:dev",
     "cli:build": "pnpm --filter=shadcn-ui build",
-    "shadcn:dev": "turbo --filter=shadcn dev",
-    "shadcn": "pnpm --filter=shadcn start:dev",
-    "shadcn:prod": "pnpm --filter=shadcn start:prod",
-    "shadcn:build": "pnpm --filter=shadcn build",
-    "shadcn:test": "pnpm --filter=shadcn test",
+    "shadcn:dev": "turbo --filter=@withsprinkles/shadcn-ui dev",
+    "shadcn": "pnpm --filter=@withsprinkles/shadcn-ui start:dev",
+    "shadcn:prod": "pnpm --filter=@withsprinkles/shadcn-ui start:prod",
+    "shadcn:build": "pnpm --filter=@withsprinkles/shadcn-ui build",
+    "shadcn:test": "pnpm --filter=@withsprinkles/shadcn-ui test",
     "docs:build": "pnpm --filter=www build:docs",
     "www:dev": "pnpm --filter=www dev",
     "www:build": "pnpm --filter=www build",
