--- a/packages/shadcn/package.json
+++ b/packages/shadcn/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shadcn",
+  "name": "@withsprinkles/shadcn-ui",
   "version": "2.7.0",
   "description": "Add components to your apps.",
   "publishConfig": {
